# surface_gpu

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build  clean  pyproject.toml  requirements.txt
examples/: 2_mediums.py  m_mediums.py  m_mediums_discrete.py
figures/: Parallel_implementation.drawio  Single_Thread.drawio
scripts/: m_mediums.ipynb  m_mediums.py  m_mediums_cpu.py  m_mediums_discrete.py  main.py  parrilla_2007.py  parrilla_2007_gpu_vs_cpu.py  two_media_single_focus.py  two_media_speedup.py
src/: main.cpp  test.cpp
src/cpp/: parrilla_2007.cu  parrilla_adapted.cu  parrilla_generalized.cu  vector_add.cu
src/cpp/include/: parrilla_2007.h  parrilla_generalized.h  test.h  vector_add.h
src/raytracing/: cpu.py  gpu.py
src/surface_gpu/: gpu.py  methods.py
tests/: 2_mediums.py  m_mediums.py  m_mediums_discrete.py
